@@ -42,6 +42,8 @@ Core
   That would look in the database field "merge_to" for a user name
   to change to.
 
+* Added new SourcePriority catalog directive.
+
 Payment
 -------
 
